--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -6,6 +6,59 @@
 
 3 连接go服务器 api 返回有信息，要注意请求方式get / post
 
-4  172.31.0.82:9090 代理忽略 192.168.0.0/16、10.0.0.0/8、127.0.0.1、localhost、*.local、172.16.0.0/12 
+4  172.31.0.82:9090 代理忽略 192.168.0.0/16、10.0.0.0/8、127.0.0.1、localhost、*.local、172.16.0.0/12
 
-5 数据库连接不上，请用curl ip 检查当前网络，可能不是公司内网
+
+5、数据库连接不上，请用curl ip 检查当前网络，可能不是公司内网
+
+6 ios 接收不到消息解决方案 1、将当前设备重启下，使得用户token绑定成功，  2、 在app设置中将消息通知开关打开即可。 
+
+队列系统：
+// 以下的任务将被委派到默认队列...
+dispatch(new Job);
+
+// 以下任务将被委派到 "emails" 队列...
+dispatch((new Job)->onQueue('emails'));
+
+默认到high高优先级队列中  先高级后低级
+php artisan queue:work --queue=high,low 
+
+创建任务
+php artisan make:job ProcessPodcast
+
+延时分发任务
+ ProcessPodcast::dispatch($podcast)->delay(now()->addMinutes(10));
+
+分发到指定队列 
+ ProcessPodcast::dispatch($podcast)->onQueue('processing');
+
+最大失败次数
+ php artisan queue:work --tries=3
+或者在job类中加变量
+
+     * The number of times the job may be attempted.
+     *
+     * @var int
+     */
+    public $tries = 5;
+
+
+php artisan queue:restart
+
+删除所有失败任务
+php artisan queue:flush
+
+
+
+
+狗好 	 id 		phone
+13215398  2000856  100000019
+
+10029783  282  10000000008
+
+11958387  1992429  10000001416
+
+12266070  1992428  10000001415
+
+10064379   234  10000000102
+
