--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,3 +1,10 @@
+7.12
+
+读取所有余额账户
+ prod_god_lyg_order_only_read order_pay
+
+SELECT * FROM `purse_account` WHERE (`gou_liang` > '10000') AND (`phone` IS NOT NULL) AND (`phone` LIKE '1000000%') AND (`gou_hao` IS NOT NULL) AND (`gou_hao` != '0') AND (`identity_card` LIKE '') AND (`favor` = '0') ORDER BY `phone` LIMIT 0,1000;
+
 
 5.21
 日志目录：
