--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,4 +1,19 @@
+
+7.23
+重启phpbrew
+sudo service phpbrew-fpm-56 restart
+当前有哪些版本：
+phpbrew list
+
 7.12
+
+常用任务命令：
+App\Models\ModeGame::query()->select('id')->where('gouhao',80268132)->get();
+
+App\Models\PlayGodAcceptSetting::refreshGod()
+
+
+
 
 读取所有余额账户
  prod_god_lyg_order_only_read order_pay
