--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,3 +1,8 @@
+   7.31
+洗大神数据
+   curl https://gateway.lygou.cc/services/v1/game/sync -H "userId:111"
+
+
    7.23
    重启phpbrew
    sudo service phpbrew-fpm-56 restart
