--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,3 +1,13 @@
+8.6
+配置文件位置：vim /etc/supervisor.d/....
+编辑后记得要 supervisorctl reload
+最后在重启任务
+
+检查任务列表，找到任务名称就可以重启
+supervisorctl status
+重启 任务
+supervisorctl restart brush-prod:
+
    7.31
 洗大神数据
    curl https://gateway.lygou.cc/services/v1/game/sync -H "userId:111"
@@ -16,9 +26,6 @@
 
    App\Models\PlayGodAcceptSetting::refreshGod()
 
-   
-   
-   
    读取所有余额账户
     prod_god_lyg_order_only_read order_pay
 
@@ -26,7 +33,7 @@
 
    
    5.21
-   日志目录：
+   supervisor日志目录：
    /var/log/supervisor/supervisord.log
 
    4.21
@@ -36,7 +43,8 @@
 
    3 连接go服务器 api 返回有信息，要注意请求方式get / post
 
-   4  172.31.0.82:9090 代理忽略 192.168.0.0/16、10.0.0.0/8、127.0.0.1、localhost、*.local、172.16.0.0/12
+   4  http_proxy=http://172.31.0.82:9090 https_proxy=http://172.31.0.82:9090
+   代理忽略： 192.168.0.0/16、10.0.0.0/8、127.0.0.1、localhost、*.local、172.16.0.0/12
 
    
    5、数据库连接不上，请用curl ip 检查当前网络，可能不是公司内网
