更新配置文件

--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -11,7 +11,9 @@ supervisorctl restart brush-prod:
    7.31
 洗大神数据
    curl https://gateway.lygou.cc/services/v1/game/sync -H "userId:111"
-
+删除下架品类缓存数据
+PHP order仓库  app/Models/PlayGame.php
+在artisan 中执行 php artisan tinker  =》   PlayGame::resetRedisGames()
 
    7.23
    重启phpbrew
