--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,3 +1,9 @@
+
+8.15
+删除服务器发布脚本的缓存目录：
+rm -rf /alidata/neutronbuild.....
+
+
 8.6
 配置文件位置：vim /etc/supervisor.d/....
 go服务 /home/land/etc/conf.d/.....
