--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,8 +1,19 @@
+8.26
+查看当前服务器php版本信息
+phpbrew list
+
+laravel 线上添加异步队列queue 库 
+步骤如下：
+php artisan queue:table  
+php artisan queue:failed-table
+注意：这里写到了app数据库中
+php artisan migrate
+Php artisan  queue:work
+Php artisan  queue:restart
 
 8.15
 删除服务器发布脚本的缓存目录：
 rm -rf /alidata/neutronbuild.....
-
 
 8.6
 配置文件位置：vim /etc/supervisor.d/....
