--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,3 +1,8 @@
+8.31
+app仓库，php灰度机标识  IS_HUIDU=1
+位置：~/.bash_profile
+
+
 8.26
 查看当前服务器php版本信息
 phpbrew list
@@ -16,10 +21,12 @@ Php artisan  queue:restart
 rm -rf /alidata/neutronbuild.....
 
 8.6
+先查看服务状态，
+sudo service supervisord status
 配置文件位置：vim /etc/supervisor.d/....
 go服务 /home/land/etc/conf.d/.....
 编辑后记得要 supervisorctl reload
-最后在重启任务
+最后在重启任务  supervisorctl restart order-test:
 
 检查任务列表，找到任务名称就可以重启
 supervisorctl status
