--- a/Darren-doc/五子棋 初始化.md
+++ b/Darren-doc/五子棋 初始化.md
@@ -82,6 +82,23 @@ ST范围：[50001-59999]
 ```
 
 
+### 进入游戏前 
+当接受游戏后，推送游戏信息给 邀约人
+
+```json
+"CTT": 403,
+  "ST": 50004,
+  "M": {
+    "game_id": "", // 游戏id，
+    "room_id":18146093990897,//房间id
+    "server_id":"114.55.111.198",//websocket地址
+    "server_port":"12345"//websocket端口号
+  }
+
+```
+
+
+
 用于小游戏中 广播通讯协议：
 
 51001 ： 申请悔棋
@@ -128,19 +145,20 @@ CREATE TABLE `flash_game` (
     `comment` varchar(64) NULL COMMENT '游戏信息',
     `name` varchar(64) NOT NULL COMMENT  '游戏名称',
     `version` int(11) NOT NULL COMMENT '版本信息',
-    `game_status` int(11) NOT NULL COMMENT '游戏状态'
+    `status` int(11) NOT NULL COMMENT '游戏状态'
 ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8mb4;
  
 
 DROP TABLE IF EXISTS `flash_games`;
 CREATE TABLE `flash_games` (
   `id` int(11) NOT NULL AUTO_INCREMENT PRIMARY KEY,
-  `create_time`         int(11)            NOT NULL COMMENT '创建时间',
-  `update_time`         int(11)             NOT NULL COMMENT '更新时间',
+  `create_time`         datetime            NOT NULL COMMENT '创建时间',
+  `update_time`         datetime             NOT NULL COMMENT '更新时间',
     `comment` varchar(64) NULL COMMENT '游戏信息',
     `name` varchar(64) NOT NULL COMMENT  '游戏名称',
     `version` int(11) NOT NULL COMMENT '版本信息',
-    `game_status` int(11) NOT NULL COMMENT '游戏状态'
+    `icon` varchar(200) NULL COMMENT '游戏图标'
+    `status` int(11) NOT NULL COMMENT '游戏状态 1正常 2尽情期待 3下架'
 ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8mb4;
 
 
