--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -1,3 +1,7 @@
+9.20
+查询redis 及时约派单大神池 的数据 {品类id  性别id}
+zrange JSYPaiDan:{44}:{1}:Gods 0 -1
+
 8.31
 app仓库，php灰度机标识  IS_HUIDU=1
 位置：~/.bash_profile
@@ -122,6 +126,9 @@ PHP order仓库  app/Models/PlayGame.php
    狗好    id             phone 
     11959048  1896  10000001313 个人常用大神  ab9bc018ef64fcc77fcfa15a6f72378c
     12248261  1992576   10000001086 个人常用大神 9d3e82865336a1e78ed734ca9c3e03eb
+
+prod自己的 狗号 79597782
+Id 206749673
 
    12447327       1998658  16602112573
     
