--- a/Darren-doc/捞月狗开发日志.md
+++ b/Darren-doc/捞月狗开发日志.md
@@ -128,7 +128,10 @@ PHP order仓库  app/Models/PlayGame.php
     12248261  1992576   10000001086 个人常用大神 9d3e82865336a1e78ed734ca9c3e03eb
 
 prod自己的 狗号 79597782
-Id 206749673
+Id 206749673  206749673
+
+另一个  狗号：
+id 206774457  79371117
 
    12447327       1998658  16602112573
     
@@ -157,3 +160,39 @@ Id 206749673
    10012123  164  10000000099
 
    11938656  13922936870  1992326
+
+测试环境
+1 魔兽世界_old
+2 DOTA2
+4 英雄联盟
+9 守望先锋001
+14  300英雄
+15  王者荣耀
+19  绝地求生
+23  无限法则
+31  QQ飞车
+32  和平精英
+33  声优聊天
+34  声音鉴定
+35  虚拟恋人
+36  第五人格
+37  音乐
+38  小游戏
+39  堡垒之夜
+40  使命召唤
+43  APEX英雄
+44  连麦观影
+45  说方言
+46  小闹钟
+47  情感咨询
+48  Dota自走棋
+49  明星大神
+50  云顶之弈
+51  故事电台
+52  多多自走棋
+53  王牌战士
+54  魔兽世界
+55  王者模拟战
+100 租个女友
+118 测试品类
+142 热血传奇
